<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_hotel_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PrimaryBG">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/account_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/account_screen_content_marginTopBottom"
            android:layout_marginEnd="@dimen/account_screen_content_marginStartEnd"
            android:layout_marginBottom="@dimen/account_screen_content_marginTopBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/account_screen_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_hotel_image"
                    android:layout_width="@dimen/account_user_image_size"
                    android:layout_height="@dimen/account_user_image_size"
                    android:contentDescription="@string/image_contentDescription"
                    app:civ_border_width="@dimen/nav_image_circular_border_width"
                    app:civ_border_color="@color/Primary"
                    android:src="@drawable/ic_user_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_name_til_marginTop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/primary_text_color"
                    app:hintTextColor="@color/Secondary"
                    app:boxStrokeColor="@color/Secondary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textSize="@dimen/body_1_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_et_email_marginTop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/primary_text_color"
                    app:hintTextColor="@color/Secondary"
                    app:boxStrokeColor="@color/Secondary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/body_1_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_et_mobile_marginTop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/primary_text_color"
                    app:hintTextColor="@color/Secondary"
                    app:boxStrokeColor="@color/Secondary"
                    app:prefixText="+31 ">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textSize="@dimen/body_1_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_et_mobile_marginTop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/primary_text_color"
                    app:hintTextColor="@color/Secondary"
                    app:boxStrokeColor="@color/Secondary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website"
                        android:inputType="text"
                        android:textSize="@dimen/body_1_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_et_mobile_marginTop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/primary_text_color"
                    app:hintTextColor="@color/Secondary"
                    app:boxStrokeColor="@color/Secondary">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:textSize="@dimen/body_1_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/account_btn_update_marginTop"
                    android:background="@color/Primary"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_padding_TopBottom"
                    android:paddingBottom="@dimen/btn_padding_TopBottom"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>